# pee

./: .gitignore  Cargo.toml  README.md  ekidd.sh  main.rs  wapm.toml
.cargo/: config
.github/workflows/: ci.yaml  release.yaml
