[package]
name = "pee"
version = "0.1.2"
authors = ["Julius Michaelis <gitter@liftm.de>"]
edition = "2018"
description = "Put bytes into a file"
license = "Apache-2.0"
readme = "README.md"
categories = ["command-line-utilities"]

[[bin]]
name = "pee"
path = "main.rs"

[dev-dependencies]
tempfile = "3.2.0"

[profile.release]
opt-level = 'z'
lto = 'fat'
codegen-units = 1
#panic = 'abort' # build-std won't like it
#strip = true # nightly :(
